# inventra-contract

./: .gitignore  LICENSE  README.md
contracts/inventra/: Cargo.toml  Makefile
contracts/inventra/src/: lib.rs  test.rs
